--- a/web/footer.xhtml
+++ b/web/footer.xhtml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" ?> 
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
- xmlns:h="http://xmlns.jcp.org/jsf/html"> 
-<footer id="footer">
-    Das ist die Anwendung von Stefanie Langhammer
-<h:outputText value="#{msg['copyright']}"/>
-</footer>
-</html>
+<ui:component xmlns="http://www.w3.org/1999/xhtml"
+              xmlns:h="http://xmlns.jcp.org/jsf/html"
+              xmlns:ui="http://xmlns.jcp.org/jsf/facelets"> 
+    <h:panelGroup layout="block" id="foot">
+        <h:outputText value="Das ist die Anwendung von Stefanie Langhammer"/>
+    <h:outputText value="#{msg['copyright']}"/>
+    </h:panelGroup>
+
+</ui:component>
+
