--- a/web/start.xhtml
+++ b/web/start.xhtml
@@ -6,9 +6,10 @@
                 xmlns:p="http://primefaces.org/ui">
     <ui:define name="content">
         <p:carousel autoPlayInterval="5000" numVisible="1" effect="easeInStrong" headerText="Endecke die neuesten Trends bei Bumblebee" style="margin-bottom:0">
-            <p:tab title="Taschen">
-                <h:panelGrid columns="2" cellpadding="10">
-                    <p:graphicImage url="image?articleno=2587587558"/>
+            <p:tab title="Taschen" >
+                
+                <h:panelGrid columns="2" cellpadding="20" width="2000" >
+                    <p:graphicImage height="50" width="50" url="image?articleno=2587587558"/>
                     <f:facet name="header" >
                         <h:outputText value="Taschen – passend zu jedem Outfit und zu jedem Anlass"/>        
                     </f:facet>
